--- a/.readme.md
+++ b/.readme.md
@@ -34,3 +34,11 @@ config add .vimrc
 config commit -m "Add vimrc"
 config push
 ```
+
+To install stuff:
+
+```sh
+cd ~/bin/install
+chmod -R 755 .
+source install.sh
+```
